fixed table spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -259,7 +259,7 @@ footer a:hover {
 
 .table {
     display: grid;
-    grid-template-columns: 70px 50px 1fr;
+    grid-template-columns: 70px 36px 1fr;
     gap: 0px;
     width: 100%;
     max-width: 220px;
